# nse-predictor

./: README.md  wrangler.toml
backend/: config.py  main.py  ml_logic.py  pyproject.toml  requirements.txt
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AfterMarket.jsx  BacktestTab.jsx  Header.jsx  LockTracker.jsx  StockCard.jsx
