[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "nse-intraday-predictor-backend"
version     = "1.0.0"
description = "XGBoost-powered NSE intraday prediction API"
readme      = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "xgboost==2.0.3",
    "scikit-learn==1.5.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "yfinance==0.2.40",
    "requests==2.32.2",
    "vaderSentiment==3.3.2",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

# ── Cloudflare Workers Python (via Pyodide runtime) ────────────────────────────
# Deploy command:  wrangler deploy
# Note: For full ML workloads use a VPS/Railway and proxy via Cloudflare Worker.
[tool.cloudflare]
name         = "nse-predictor-api"
main         = "main.py"
compatibility_date = "2024-09-23"
compatibility_flags = ["python_workers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
